--- a/platformio.ini
+++ b/platformio.ini
@@ -1,33 +1,25 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-build_flags = 
-	-Os
-	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-	-DUSER_SETUP_LOADED=1
-	-DST7789_DRIVER=1
-	-DTFT_WIDTH=135
-	-DTFT_HEIGHT=240
-	-DCGRAM_OFFSET=1
-	-DTFT_MISO=-1
-	-DTFT_MOSI=19
-	-DTFT_SCLK=18
-	-DTFT_CS=5
-	-DTFT_DC=16
-	-DTFT_RST=23
-	-DTFT_BL=4
-	-DTFT_BACKLIGHT_ON=1
-	-DLOAD_GLCD=1
-	-DLOAD_FONT2=1
-	-DLOAD_FONT4=1
-	-DLOAD_FONT6=1
-	-DLOAD_FONT7=1
-	-DLOAD_FONT8=1
-	-DLOAD_GFXFF=1
-	-DSMOOTH_FONT=1
-	-DSPI_FREQUENCY=40000000
-	-DSPI_READ_FREQUENCY=6000000
-lib_deps = siara-cc/Sqlite Micro Logger@^1.2.0
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
+lib_deps = 
+	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
+	mikalhart/TinyGPSPlus@^1.1.0
+	plerup/EspSoftwareSerial@^8.2.0
+	adafruit/Adafruit MPU6050@^2.2.6
+	adafruit/Adafruit BME280 Library@^2.3.0
+	bblanchon/ArduinoJson@^7.4.1
